fix(camera): fixed solution overlay on mobile

--- a/website/app/page.module.scss
+++ b/website/app/page.module.scss
@@ -20,3 +20,7 @@
   top: 0;
   left: 0;
 }
+
+.hidden {
+  display: none;
+}
